--- a/Socialite/src/Components/Navbar.css
+++ b/Socialite/src/Components/Navbar.css
@@ -59,11 +59,12 @@ body, html {
     font-size: 1.5rem;  /* Adjust icon size */
     color: white;
     cursor: pointer;
-    border: 2px solid white; /* Outer border for icons */
+    border: 2px solid rgb(82, 81, 81); /* Outer border for icons changed to gray */
     border-radius: 50%; /* Make icons circular */
     padding: 10px; /* Space inside the border */
     transition: background-color 0.3s; /* Smooth background color change on hover */
 }
+
 
 /* Space between each icon */
 .icon:not(:last-child) {
