--- a/Socialite/src/Components/Navbar.css
+++ b/Socialite/src/Components/Navbar.css
@@ -25,6 +25,18 @@ body, html {
     align-items: center;
 }
 
+.left-side-nav {
+    width: 250px; /* Fixed width for the sidebar */
+    height: calc(100vh - 60px); /* Full height minus navbar height */
+    background-color: #15202b; /* Sidebar background color */
+    padding: 10px;
+    position: fixed; /* Fix sidebar on the left */
+    top: 60px; /* Position it directly below the navbar */
+    left: 0; /* Align to the left */
+    transition: transform 0.3s ease;
+}
+
+
 .navbar-logo {
     margin-right: 50px; /* Adds space between logo and search bar */
     padding: 12px; /* Add padding around the logo */
