--- a/Socialite/src/Components/Navbar.css
+++ b/Socialite/src/Components/Navbar.css
@@ -10,7 +10,7 @@ body, html {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color:rgb(35, 31, 49);
+    background-color:rgb(30 41 59 );
     color: white;
     width: 100vw; /* Ensure full viewport width */
     position: fixed; /* Make the navbar fixed at the top */
